@@ -172,7 +172,7 @@ Friendly, M. (2006).
 Friendly, M. (2007).
   HE plots for Multivariate General Linear Models.
   \emph{Journal of Computational and Graphical Statistics}, 16(2) 421-444.
-  \url{http://www.math.yorku.ca/SCS/Papers/jcgs-heplots.pdf} 
+  \url{http://datavis.ca/papers/jcgs-heplots.pdf} 
 }
 
 \seealso{
