@@ -4,6 +4,8 @@ Version 0.9-7 (2010-11-4)
    with polygon() for H and E ellipses; calculate H.rank to distinguish degenerate ellipses
  o added last() to utility.R 
  o Modified some examples to show fill=TRUE and use wire=FALSE in heplot3d()
+ o Modified pairs.mlm() to pass fill= and fill.alpha= to heplot()
+ o Updated reference URLs to point to datavis.ca
  
 
  Version 0.9-6 (2010-11-2)
